Fixed header spacing on mobile

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -8,7 +8,7 @@
     background-size: cover;
 }
 
-h1 {
+.h1 {
     font-size: 70px;
     color: #ffffff;
     padding-top: 150px;
